add: put route for game
